--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div class="video-card">
                     <div class="video-wrapper">
                         <!-- Substitua com o link do seu vídeo do YouTube/Vimeo -->
-                        <iframe src="https://www.youtube.com/embed/hBgwhlNxBg4" frameborder="0" allowfullscreen></iframe>
+                        <iframe src="https://player.vimeo.com/video/1122255125" frameborder="0" allowfullscreen></iframe>
                     </div>
                     <div class="video-info">
                         <h3>Título do Projeto 1</h3>
