--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                         <iframe src="https://player.vimeo.com/video/1122255125" frameborder="0" allowfullscreen></iframe>
                     </div>
                     <div class="video-info">
-                        <h3>Título do Projeto 1</h3>
-                        <p>Breve descrição do projeto. Edição comercial para marca de moda, incluindo colorização cinematográfica e efeitos visuais.</p>
+                        <h3>Showreel</h3>
+                        <p>O meu showreel pessoal com projetos selecionados de edição de vídeo, incluindo curtas, videos institucionais, motion, entre outros.</p>
                     </div>
                 </div>
 
