--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@
                     <div class="video-wrapper">
                         <div class="video-placeholder">▶</div>
                     </div>
+                   <iframe src="https://drive.google.com/file/d/17pG_ey6enggBLCpUmQkEat9WzYIz3GDK/view?usp=sharing" frameborder="0" allowfullscreen></iframe>
                     <div class="video-info">
-                        <h3>Título do Projeto 2</h3>
-                        <p>Videoclipe musical com edição dinâmica e sincronização perfeita com a batida. Motion graphics e correção de cor avançada.</p>
+                        <h3>Mural Sumol | World Academy</h3>
+                        <p>Uma pequena entrevista com a formadora Tamara Alves, que conta a sua experiência com os alunos e a marca, mostrando o trabalho árduo que tiveram no projeto.</p>
                     </div>
                 </div>
 
@@ -107,7 +108,7 @@
                     em narrativas cinematográficas cativantes.
                 </p>
                 <p>
-                    Domino ferramentas como Adobe Premiere Pro, After Effects e DaVinci Resolve.
+                    Domino ferramentas como Adobe Premiere Pro, DaVinci Resolve e After Effects.
                     A minha abordagem combina técnica apurada com sensibilidade artística, sempre buscando o equilíbrio 
                     perfeito entre estética e mensagem.
                 </p>
@@ -115,7 +116,6 @@
                     Almejo chegar num ponto em que possa contribuir para videclipes de artistas do meu bairro, mas até lá valorizo e 
                     procuro cada chance que me faça aprender cada vez mais na área da pós-produção.
                     Procuro o desconfortável porque sei que é lá que vou aprender mais.
-                    
                     Amo histórias e amo emoções, então junto emoções às histórias que crio e/ou me chegam.
                 </p>
             </div>
@@ -130,7 +130,7 @@
                     <div class="contact-icon">📧</div>
                     <div class="contact-details">
                         <h3>Email</h3>
-                        <a href="mailto:seu.email@exemplo.com">leonardoramos-1@hotmail.com</a>
+                        <a href="leonardoramos-1@hotmail.com">leonardoramos-1@hotmail.com</a>
                     </div>
                 </div>
                     </div>
@@ -140,7 +140,7 @@
                     <div class="contact-icon">💼</div>
                     <div class="contact-details">
                         <h3>LinkedIn</h3>
-                        <a href="https://linkedin.com/in/seuperfil" target="_blank">https://www.linkedin.com/in/leoaramos/</a>
+                        <a href="https://www.linkedin.com/in/leoaramos/" target="_blank">https://www.linkedin.com/in/leoaramos/</a>
                     </div>
                 </div>
 
