--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     </div>
                     <div class="video-info">
                         <h3>Vincent van Gogh</h3>
-                        <p>Uma animação que retrata a vida e obra do pintor Vincent van Gogh, como se estivessemos a passear pelas suas obras.</p>
+                        <p>Uma animação que retrata a vida do pintor Vincent van Gogh, como se estivessemos a passear pelas suas obras.</p>
                     </div>
                 </div>
 
