--- a/index.html
+++ b/index.html
@@ -66,11 +66,12 @@
                 <!-- Vídeo 4 -->
                 <div class="video-card">
                     <div class="video-wrapper">
-                        <div class="video-placeholder">▶</div>
+                        <!-- Substitua com o link do seu vídeo do YouTube/Vimeo -->
+                        <iframe src="https://player.vimeo.com/video/1162612537" frameborder="0" allowfullscreen></iframe>
                     </div>
                     <div class="video-info">
-                        <h3>Título do Projeto 4</h3>
-                        <p>Conteúdo para redes sociais otimizado para engagement. Edição ágil com legendas animadas e transições criativas.</p>
+                        <h3>Tartarugas Ninja das Batalhas de Rima</h3>
+                        <p>Um vídeo inspirado na abertura do desenho animado "Tartarugas Ninja" (2012) inserindo 4 MC's de batalha como persoangens.</p>
                     </div>
                 </div>
 
