--- a/index.html
+++ b/index.html
@@ -90,11 +90,12 @@
                 <!-- Vídeo 6 -->
                 <div class="video-card">
                     <div class="video-wrapper">
-                        <div class="video-placeholder">▶</div>
+                        <!-- Substitua com o link do seu vídeo do YouTube/Vimeo -->
+                        <iframe src="https://www.youtube.com/embed/VWKTdKz77Lc" frameborder="0" allowfullscreen></iframe>
                     </div>
                     <div class="video-info">
-                        <h3>Título do Projeto 6</h3>
-                        <p>Trailer cinematográfico com storytelling visual impactante. Sound design, VFX e grading profissional.</p>
+                        <h3>Calcanhar | Curta</h3>
+                        <p>Curta que fiz color grading que conta a história de Maria, uma atriz cansada de pegar papéis secundários e busca soluções para se tornar a melhor.</p>
                     </div>
                 </div>
             </div>
