--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <h2>Leonardo Ramos</h2>
             <div class="about-content">
                 
-<img src="nome-da-tua-foto.jpg" alt="Seu Nome">
+<img src="nome-da-tua-foto.jpg" alt=
 
                 <p>
                     Sou um editor de vídeo apaixonado por contar histórias visuais que conectam e inspiram. 
