--- a/index.html
+++ b/index.html
@@ -105,10 +105,7 @@
     <section id="sobre">
         <div class="container">
             <h2>Leonardo Ramos</h2>
-            <div class="about-content">
-                
-<img src="nome-da-tua-foto.jpg" alt=
-
+            <div class="about-content"> <img src="sua-foto.jpg" alt="Seu Nome">
                 <p>
                     Sou um editor de vídeo apaixonado por contar histórias visuais que conectam e inspiram. 
                     Com 3 anos de experiência na indústria audiovisual, especializo-me em transformar footage bruto 
